--- a/Projet/src/application/Home.fxml
+++ b/Projet/src/application/Home.fxml
@@ -48,5 +48,10 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </ImageView>
+      <ImageView fitHeight="62.0" fitWidth="140.0" layoutX="14.0" layoutY="333.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../ressources/exit.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
