--- a/Projet/bin/application/Home.fxml
+++ b/Projet/bin/application/Home.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane minHeight="400.0" minWidth="600.0" prefHeight="414.0" prefWidth="734.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
    <children>
-      <ImageView pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="463.0" fitWidth="736.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../ressources/background.png" />
          </image>
@@ -50,6 +50,9 @@
          <image>
             <Image url="@../ressources/exit.png" />
          </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </ImageView>
    </children>
 </AnchorPane>
