--- a/Projet/bin/application/application.css
+++ b/Projet/bin/application/application.css
@@ -1,3 +1,5 @@
-* {
-	-fx-background-color: pink;
+/* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+.anchor {
+    -fx-background-image:url('../../../fond.jpg');
+    /*-fx-background-color: pink;*/
 }
