--- a/Projet/src/application/ChooseSkin.fxml
+++ b/Projet/src/application/ChooseSkin.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -15,9 +14,9 @@
             <Image url="@../ressources/background.png" />
          </image>
       </ImageView>
-      <Text layoutX="241.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose your skin">
+      <Text layoutX="216.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose your skin">
          <font>
-            <Font name="Algerian" size="36.0" />
+            <Font name="Krabby Patty" size="36.0" />
          </font>
       </Text>
       <ImageView fitHeight="150.0" fitWidth="145.0" layoutX="509.0" layoutY="180.0" pickOnBounds="true" preserveRatio="true">
