--- a/SpongeBob/src/application/AreYouSure.fxml
+++ b/SpongeBob/src/application/AreYouSure.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="369.0" prefWidth="762.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="369.0" prefWidth="762.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
  <children>
       <ImageView fitHeight="443.0" fitWidth="784.0" pickOnBounds="true" preserveRatio="true">
          <image>
