--- a/SpongeBob/src/application/ChooseName.fxml
+++ b/SpongeBob/src/application/ChooseName.fxml
@@ -8,8 +8,8 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="414.0" prefWidth="734.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
+<AnchorPane prefHeight="414.0" prefWidth="734.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
+ <children>
       <ImageView fitHeight="466.0" fitWidth="742.0" layoutX="-6.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resource/image/background.png" />
@@ -20,14 +20,14 @@
             <Font name="Krabby Patty" size="36.0" />
          </font>
       </Text>
-      <ImageView fitHeight="57.0" fitWidth="133.0" layoutX="14.0" layoutY="391.0" onMouseClicked="#BackHome" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../resource/image/back.png" />
-         </image>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </ImageView>
+      <ImageView fitHeight="57.0" fitWidth="133.0" layoutX="14.0" layoutY="391.0" onMouseClicked="#OpenNumberOfPlayers" pickOnBounds="true" preserveRatio="true">
+	    <image>
+	        <Image url="@../../resource/image/back.png" />
+	    </image>
+	    <cursor>
+	        <Cursor fx:constant="HAND" />
+    	</cursor>
+		</ImageView>
       <ImageView fitHeight="92.0" fitWidth="88.0" layoutX="316.0" layoutY="303.0" onMouseClicked="#OpenChooseSkin" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resource/image/next.png" />
