--- a/SpongeBob/src/application/Error_AddName.fxml
+++ b/SpongeBob/src/application/Error_AddName.fxml
@@ -6,14 +6,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="369.0" prefWidth="762.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="369.0" prefWidth="762.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
    <children>
       <ImageView fitHeight="432.0" fitWidth="768.0" layoutX="-6.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resource/image/error.png" />
          </image>
       </ImageView>
-      <Text layoutX="197.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Player have name !">
+      <Text layoutX="212.0" layoutY="79.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Players have names!">
          <font>
             <Font name="Krabby Patty" size="36.0" />
          </font>
@@ -23,7 +23,7 @@
             <Image url="@../../resource/image/plankton.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="68.0" fitWidth="142.0" layoutX="14.0" layoutY="302.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="68.0" fitWidth="142.0" layoutX="14.0" layoutY="302.0" onMouseClicked="#BackPlayerName" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resource/image/back.png" />
          </image>
