--- a/SpongeBob/src/application/NumberOfPlayers.fxml
+++ b/SpongeBob/src/application/NumberOfPlayers.fxml
@@ -8,11 +8,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
-
-<AnchorPane prefHeight="369.0" prefWidth="762.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <ImageView fitHeight="471.0" fitWidth="745.0" layoutX="-6.0" pickOnBounds="true" preserveRatio="true">
+<AnchorPane prefHeight="369.0" prefWidth="762.0"  xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
+<children>
+      <ImageView fitHeight="481.0" fitWidth="768.0" layoutX="-6.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resource/image/background.png" />
          </image>
@@ -22,7 +20,7 @@
             <Font name="Krabby Patty" size="36.0" />
          </font>
       </Text>
-      <ImageView fitHeight="57.0" fitWidth="133.0" layoutX="14.0" layoutY="391.0" onMouseClicked="#BackHome" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="57.0" fitWidth="133.0" layoutX="14.0" layoutY="409.0" onMouseClicked="#BackHome" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resource/image/back.png" />
          </image>
@@ -53,7 +51,7 @@
             <Font name="WishfulWaves" size="35.0" />
          </font>
       </RadioButton>
-      <ImageView fitHeight="92.0" fitWidth="88.0" layoutX="334.0" layoutY="303.0" onMouseClicked="#OpenChooseName" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="92.0" fitWidth="88.0" layoutX="334.0" layoutY="303.0" onMouseClicked="#OpenName" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resource/image/next.png" />
          </image>
