--- a/SpongeBob/src/application/Rules.fxml
+++ b/SpongeBob/src/application/Rules.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="438.0" prefWidth="801.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
    <children>
       <ImageView fitHeight="543.0" fitWidth="819.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -20,7 +20,7 @@
             <Font name="WishfulWaves" size="36.0" />
          </font>
       </Text>
-      <ImageView fitHeight="89.0" fitWidth="84.0" layoutX="729.0" layoutY="418.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="89.0" fitWidth="84.0" layoutX="698.0" layoutY="432.0" onMouseClicked="#BackHome" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resource/image/next.png" />
          </image>
