--- a/SpongeBob/src/view/ChooseSkin.fxml
+++ b/SpongeBob/src/view/ChooseSkin.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="443.0" prefWidth="709.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
+<AnchorPane prefHeight="443.0" prefWidth="709.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ChooseSkinController">
    <children>
       <ImageView fitHeight="443.0" fitWidth="784.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -21,7 +21,8 @@
       </Text>
 
       <!-- MrKrabs Image acting as RadioButton -->
-      <ImageView fx:id="MrKrabsImage" fitHeight="150.0" fitWidth="145.0" layoutX="509.0" layoutY="180.0" onMouseClicked="#selectMrKrabs" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="MrKrabsImage" fitHeight="150.0" fitWidth="145.0" layoutX="509.0" layoutY="180.0" 
+                 onMouseClicked="#selectSkin" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resource/image/MrKrabs.png" />
          </image>
@@ -31,7 +32,8 @@
       </ImageView>
 
       <!-- Sandy Image acting as RadioButton -->
-      <ImageView fx:id="SandyImage" fitHeight="150.0" fitWidth="113.0" layoutX="303.0" layoutY="119.0" onMouseClicked="#selectSandy" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="SandyImage" fitHeight="150.0" fitWidth="113.0" layoutX="303.0" layoutY="119.0" 
+                 onMouseClicked="#selectSkin" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resource/image/Sandy.png" />
          </image>
@@ -41,7 +43,8 @@
       </ImageView>
 
       <!-- Squidward Image acting as RadioButton -->
-      <ImageView fx:id="SquidwardImage" fitHeight="141.0" fitWidth="62.0" layoutX="241.0" layoutY="147.0" onMouseClicked="#selectSquidward" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="SquidwardImage" fitHeight="141.0" fitWidth="62.0" layoutX="241.0" layoutY="147.0" 
+                 onMouseClicked="#selectSkin" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resource/image/Squidward.png" />
          </image>
@@ -51,7 +54,8 @@
       </ImageView>
 
       <!-- Spongebob Image acting as RadioButton -->
-      <ImageView fx:id="SpongebobImage" fitHeight="128.0" fitWidth="149.0" layoutX="92.0" layoutY="207.0" onMouseClicked="#selectSpongebob" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="SpongebobImage" fitHeight="128.0" fitWidth="149.0" layoutX="92.0" layoutY="207.0" 
+                 onMouseClicked="#selectSkin" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resource/image/Spongebob.png" />
          </image>
@@ -61,7 +65,8 @@
       </ImageView>
 
       <!-- Patrick Image acting as RadioButton -->
-      <ImageView fx:id="PatrickImage" fitHeight="141.0" fitWidth="109.0" layoutX="414.0" layoutY="154.0" onMouseClicked="#selectPatrick" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="PatrickImage" fitHeight="141.0" fitWidth="109.0" layoutX="414.0" layoutY="154.0" 
+                 onMouseClicked="#selectSkin" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resource/image/Patrick.png" />
          </image>
@@ -71,7 +76,8 @@
       </ImageView>
 
       <!-- Next Button to continue -->
-      <ImageView fitHeight="107.0" fitWidth="120.0" layoutX="304.0" layoutY="306.0" onMouseClicked="#OpenBoardGame" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="nextButton" fitHeight="107.0" fitWidth="120.0" layoutX="304.0" layoutY="306.0" 
+                 onMouseClicked="#goToBoardGame" pickOnBounds="true" preserveRatio="true" disable="true">
          <image>
             <Image url="@../../resource/image/next.png" />
          </image>
