--- a/SpongeBob/src/view/BoardGame.fxml
+++ b/SpongeBob/src/view/BoardGame.fxml
@@ -201,5 +201,30 @@
             <Image url="@../../resource/image/gold.png" />
          </image>
       </ImageView>
+      <ImageView fitHeight="52.0" fitWidth="52.0" layoutX="14.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../resource/image/squidward_pawn.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="52.0" fitWidth="52.0" layoutX="14.0" layoutY="82.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../resource/image/sandy_pawn.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="52.0" fitWidth="52.0" layoutX="14.0" layoutY="141.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../resource/image/mrKrabs_pawn.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="52.0" fitWidth="52.0" layoutX="14.0" layoutY="204.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../resource/image/patrick_pawn.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="52.0" fitWidth="52.0" layoutX="14.0" layoutY="263.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../resource/image/spongebob_pawn.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
