--- a/SpongeBob/src/view/ChooseSkin.fxml
+++ b/SpongeBob/src/view/ChooseSkin.fxml
@@ -21,8 +21,7 @@
       </Text>
 
       <!-- MrKrabs Image acting as RadioButton -->
-      <ImageView fx:id="MrKrabsImage" fitHeight="150.0" fitWidth="145.0" layoutX="509.0" layoutY="180.0" 
-                 onMouseClicked="#selectSkin" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="MrKrabsImage" fitHeight="150.0" fitWidth="145.0" layoutX="509.0" layoutY="180.0" onMouseClicked="#selectSkin" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resource/image/MrKrabs.png" />
          </image>
@@ -32,8 +31,7 @@
       </ImageView>
 
       <!-- Sandy Image acting as RadioButton -->
-      <ImageView fx:id="SandyImage" fitHeight="150.0" fitWidth="113.0" layoutX="303.0" layoutY="119.0" 
-                 onMouseClicked="#selectSkin" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="SandyImage" fitHeight="150.0" fitWidth="113.0" layoutX="303.0" layoutY="119.0" onMouseClicked="#selectSkin" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resource/image/Sandy.png" />
          </image>
@@ -43,8 +41,7 @@
       </ImageView>
 
       <!-- Squidward Image acting as RadioButton -->
-      <ImageView fx:id="SquidwardImage" fitHeight="141.0" fitWidth="62.0" layoutX="241.0" layoutY="147.0" 
-                 onMouseClicked="#selectSkin" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="SquidwardImage" fitHeight="141.0" fitWidth="62.0" layoutX="241.0" layoutY="147.0" onMouseClicked="#selectSkin" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resource/image/Squidward.png" />
          </image>
@@ -54,8 +51,7 @@
       </ImageView>
 
       <!-- Spongebob Image acting as RadioButton -->
-      <ImageView fx:id="SpongebobImage" fitHeight="128.0" fitWidth="149.0" layoutX="92.0" layoutY="207.0" 
-                 onMouseClicked="#selectSkin" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="SpongebobImage" fitHeight="128.0" fitWidth="149.0" layoutX="92.0" layoutY="207.0" onMouseClicked="#selectSkin" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resource/image/Spongebob.png" />
          </image>
@@ -65,8 +61,7 @@
       </ImageView>
 
       <!-- Patrick Image acting as RadioButton -->
-      <ImageView fx:id="PatrickImage" fitHeight="141.0" fitWidth="109.0" layoutX="414.0" layoutY="154.0" 
-                 onMouseClicked="#selectSkin" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="PatrickImage" fitHeight="141.0" fitWidth="109.0" layoutX="414.0" layoutY="154.0" onMouseClicked="#selectSkin" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resource/image/Patrick.png" />
          </image>
@@ -75,9 +70,8 @@
          </cursor>
       </ImageView>
 
-      <!-- Bouton Next désactivé -->
-      <ImageView fx:id="nextDisabledImage" fitHeight="107.0" fitWidth="120.0" layoutX="304.0" layoutY="306.0" 
-                 onMouseClicked="#goToBoardGame" pickOnBounds="true" preserveRatio="true" visible="true">
+      <!-- Next Button (disabled) -->
+      <ImageView fx:id="nextDisabledImage" fitHeight="107.0" fitWidth="120.0" layoutX="304.0" layoutY="306.0" onMouseClicked="#goToBoardGame" pickOnBounds="true" preserveRatio="true" visible="true">
          <image>
             <Image url="@../../resource/image/nextGrey.png" />
          </image>
@@ -86,9 +80,8 @@
          </cursor>
       </ImageView>
 
-      <!-- Bouton Next activé -->
-      <ImageView fx:id="nextEnabledImage" fitHeight="107.0" fitWidth="120.0" layoutX="304.0" layoutY="306.0" 
-                 onMouseClicked="#goToBoardGame" pickOnBounds="true" preserveRatio="true" visible="false">
+      <!-- Next Button (enabled) -->
+      <ImageView fx:id="nextEnabledImage" fitHeight="107.0" fitWidth="120.0" layoutX="304.0" layoutY="306.0" onMouseClicked="#goToBoardGame" pickOnBounds="true" preserveRatio="true" visible="false">
          <image>
             <Image url="@../../resource/image/next.png" />
          </image>
