--- a/SpongeBob/src/view/Error_AddName.fxml
+++ b/SpongeBob/src/view/Error_AddName.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="369.0" prefWidth="762.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
+<AnchorPane prefHeight="369.0" prefWidth="762.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ErrorAddNameController">
    <children>
       <!-- Background image -->
       <ImageView fitHeight="432.0" fitWidth="768.0" layoutX="-6.0" pickOnBounds="true" preserveRatio="true">
@@ -17,7 +17,7 @@
       </ImageView>
       
       <!-- Error message text -->
-      <Text layoutX="212.0" layoutY="79.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Players have names!">
+      <Text layoutX="212.0" layoutY="79.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Players have names!" fill="#ff0000">
          <font>
             <Font name="Krabby Patty" size="36.0" />
          </font>
@@ -30,8 +30,8 @@
          </image>
       </ImageView>
       
-      <!-- Back button to return to player name input screen -->
-      <ImageView fitHeight="68.0" fitWidth="142.0" layoutX="14.0" layoutY="302.0" onMouseClicked="#BackPlayerName" pickOnBounds="true" preserveRatio="true">
+      <!-- Back button -->
+      <ImageView fitHeight="68.0" fitWidth="142.0" layoutX="14.0" layoutY="302.0" onMouseClicked="#handleBackButton" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resource/image/back.png" />
          </image>
