--- a/SpongeBob/bin/view/Error_DoubleName.fxml
+++ b/SpongeBob/bin/view/Error_DoubleName.fxml
@@ -24,7 +24,7 @@
       </Text>
       
       <!-- Plankton image -->
-      <ImageView fitHeight="68.0" fitWidth="142.0" layoutX="14.0" layoutY="302.0" onMouseClicked="#BackPlayerName" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="68.0" fitWidth="142.0" layoutX="14.0" layoutY="302.0" onMouseClicked="#CreatedPlayer" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resource/image/back.png" />
          </image>
