--- a/SpongeBob/bin/view/NumberOfPlayers.fxml
+++ b/SpongeBob/bin/view/NumberOfPlayers.fxml
@@ -8,9 +8,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<AnchorPane prefHeight="369.0" prefWidth="762.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.NumberOfPlayersController">
+
+<AnchorPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.NumberOfPlayersController">
     <children>
-        <ImageView fitHeight="481.0" fitWidth="768.0" layoutX="-6.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../../resource/image/background.png" />
             </image>
@@ -54,24 +55,24 @@
             </font>
         </RadioButton>
         
-        <!-- Disabled Next Button (Grey) -->
-        <ImageView fx:id="nextDisabledImage" fitHeight="92.0" fitWidth="88.0" layoutX="334.0" layoutY="303.0" onMouseClicked="#goToNameScreen" pickOnBounds="true" preserveRatio="true" visible="true">
-           	<image>
-                <Image url="@../../resource/image/nextGrey.png" />
-            </image>
-            <cursor>
-                <Cursor fx:constant="HAND" />
-            </cursor>
-        </ImageView>
+        <ImageView fx:id="nextDisabledImage" fitHeight="92.0" fitWidth="88.0" layoutX="334.0" layoutY="303.0" onMouseClicked="#goToPlayersScreen" pickOnBounds="true" preserveRatio="true" visible="true">
+    <image>
+        <Image url="@../../resource/image/nextGrey.png" />
+    </image>
+    <cursor>
+        <Cursor fx:constant="HAND" />
+    </cursor>
+</ImageView>
 
-        <!-- Enabled Next Button -->
-        <ImageView fx:id="nextEnabledImage" fitHeight="92.0" fitWidth="88.0" layoutX="334.0" layoutY="303.0" onMouseClicked="#goToNameScreen" pickOnBounds="true" preserveRatio="true" visible="false">
-            <image>
-                <Image url="@../../resource/image/next.png" />
-            </image>
-            <cursor>
-                <Cursor fx:constant="HAND" />
-            </cursor>
-        </ImageView>
+<!-- Enabled Next Button -->
+<ImageView fx:id="nextEnabledImage" fitHeight="92.0" fitWidth="88.0" layoutX="334.0" layoutY="303.0" onMouseClicked="#goToPlayersScreen" pickOnBounds="true" preserveRatio="true" visible="false">
+    <image>
+        <Image url="@../../resource/image/next.png" />
+    </image>
+    <cursor>
+        <Cursor fx:constant="HAND" />
+    </cursor>
+</ImageView>
+
     </children>
 </AnchorPane>
