--- a/SpongeBob/src/application/application.css
+++ b/SpongeBob/src/application/application.css
@@ -1,1 +1,18 @@
 /* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+/* style.css */
+.root {
+	-fx-border-color: #4d4d4d;
+	-fx-border-width: 5px;
+}
+
+/* Style pour la bordure en plein écran */
+.stack-pane {
+    -fx-border-color: white;
+    -fx-border-width: 2px;
+    -fx-background-color: black;
+}
+
+.full-screen {
+    -fx-padding: 5px;
+}
+
