--- a/SpongeBob/src/view/Rules.fxml
+++ b/SpongeBob/src/view/Rules.fxml
@@ -1,103 +1,136 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
+<StackPane fx:id="rootPane" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
    <children>
-      <ImageView fitHeight="543.0" fitWidth="819.0" pickOnBounds="true" preserveRatio="true">
+
+      <!-- Fullscreen Background -->
+      <ImageView fx:id="backgroundImage" preserveRatio="false" fitWidth="1920" fitHeight="1080">
          <image>
             <Image url="@../../resource/image/ocean.png" />
          </image>
       </ImageView>
-      <Text fill="#1e27c4" layoutX="14.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" Rules by Karen">
-         <font>
-            <Font name="WishfulWaves" size="36.0" />
-         </font>
-      </Text>
-      <ImageView fitHeight="89.0" fitWidth="84.0" layoutX="698.0" layoutY="432.0" onMouseClicked="#BackHome" pickOnBounds="true" preserveRatio="true">
+
+      <!-- Main Content (Karen + Text Panel) -->
+      <HBox alignment="CENTER" spacing="60">
+         
+         <!-- Karen Image -->
+         <ImageView fitHeight="500" preserveRatio="true">
+            <image>
+               <Image url="@../../resource/image/karen.png" />
+            </image>
+         </ImageView>
+
+         <!-- Panel + Text -->
+         <StackPane alignment="CENTER">
+            <children>
+               <!-- Rectangle Panel -->
+               <Rectangle width="900" height="600" arcWidth="40" arcHeight="40" fill="#000000AA" />
+
+               <!-- Centered VBox inside Rectangle -->
+               <VBox spacing="18" alignment="CENTER_LEFT">
+                  <padding>
+                     <Insets top="40" right="40" bottom="40" left="40"/>
+                  </padding>
+
+                  <Text text="Rules by Karen" fill="#00BFFF">
+                     <font>
+                        <Font name="WishfulWaves" size="36.0" />
+                     </font>
+                  </Text>
+
+                  <Text text="Objective:" fill="WHITE">
+                     <font>
+                        <Font name="Underwater Love" size="22.0" />
+                     </font>
+                  </Text>
+                  <Text wrappingWidth="800" fill="WHITE"
+                        text="Reach the final golden space and answer a last question to win. The game ends immediately when a player wins.">
+                     <font>
+                        <Font name="Verdana" size="17.0" />
+                     </font>
+                  </Text>
+
+                  <Text text="Players:" fill="WHITE">
+                     <font>
+                        <Font name="Underwater Love" size="22.0" />
+                     </font>
+                  </Text>
+                  <Text text="2 to 5 players" fill="WHITE">
+                     <font>
+                        <Font name="Verdana" size="17.0" />
+                     </font>
+                  </Text>
+
+                  <Text text="Turn:" fill="WHITE">
+                     <font>
+                        <Font name="Underwater Love" size="22.0" />
+                     </font>
+                  </Text>
+                  <Text wrappingWidth="800" fill="WHITE"
+                        text="Pick a random topic, choose a difficulty (1–4), and answer a question in 35 seconds.">
+                     <font>
+                        <Font name="Verdana" size="17.0" />
+                     </font>
+                  </Text>
+                  <Text text="Correct = move forward, wrong = stay." wrappingWidth="800" fill="WHITE">
+                     <font>
+                        <Font name="Verdana" size="17.0" />
+                     </font>
+                  </Text>
+
+                  <Text text="Movement:" fill="WHITE">
+                     <font>
+                        <Font name="Underwater Love" size="22.0" />
+                     </font>
+                  </Text>
+                  <Text text="Multiple players can share the same space." wrappingWidth="800" fill="WHITE">
+                     <font>
+                        <Font name="Verdana" size="17.0" />
+                     </font>
+                  </Text>
+
+                  <Text text="Winning:" fill="WHITE">
+                     <font>
+                        <Font name="Underwater Love" size="22.0" />
+                     </font>
+                  </Text>
+                  <Text text="On the final space, answer a last question. Correct = victory, wrong = try again next turn."
+                        wrappingWidth="800" fill="#acbbd7">
+                     <font>
+                        <Font name="Verdana" size="17.0" />
+                     </font>
+                  </Text>
+               </VBox>
+            </children>
+         </StackPane>
+      </HBox>
+
+      <!-- Back Button -->
+      <ImageView fx:id="backButton" fitHeight="70.0" fitWidth="70.0" onMouseClicked="#BackHome"
+                 StackPane.alignment="BOTTOM_RIGHT" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resource/image/next.png" />
          </image>
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
+         <StackPane.margin>
+            <Insets bottom="20" right="20"/>
+         </StackPane.margin>
       </ImageView>
-      <ImageView fitHeight="250.0" fitWidth="247.0" layoutX="-44.0" layoutY="125.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../resource/image/karen.png" />
-         </image>
-      </ImageView>
-      <Text fill="WHITE" layoutX="169.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Objective:">
-         <font>
-            <Font name="Underwater Love" size="23.0" />
-         </font>
-         <effect>
-            <ColorAdjust brightness="1.0" />
-         </effect>
-      </Text>
-      <Text fill="WHITE" layoutX="340.0" layoutY="96.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Reach the final golden space and answer a last question to win. The game ends immediately when a player wins." wrappingWidth="469.1036834716797">
-         <font>
-            <Font name="Blackadder ITC" size="23.0" />
-         </font>
-         <effect>
-            <ColorAdjust brightness="1.0" />
-         </effect>
-      </Text>
-      <Text fill="WHITE" layoutX="165.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Players : ">
-         <font>
-            <Font name="Underwater Love" size="23.0" />
-         </font>
-      </Text>
-      <Text fill="WHITE" layoutX="340.0" layoutY="154.0" strokeType="OUTSIDE" strokeWidth="0.0" text="2 to 5" wrappingWidth="57.90373229980469">
-         <font>
-            <Font name="Blackadder ITC" size="23.0" />
-         </font>
-      </Text>
-      <Text fill="#f4f8ff" layoutX="161.0" layoutY="226.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Turn :">
-         <font>
-            <Font name="Underwater Love" size="23.0" />
-         </font>
-      </Text>
-      <Text fill="#f4f8ff" layoutX="340.0" layoutY="196.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Reach the final golden space and answer a last question to win. The game ends immediately wPick a random topic, choose a difficulty (1-4), and answer a question in 35 seconds. " wrappingWidth="469.1036834716797">
-         <font>
-            <Font name="Blackadder ITC" size="23.0" />
-         </font>
-      </Text>
-      <Text fill="WHITE" layoutX="169.0" layoutY="349.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Movement :">
-         <font>
-            <Font name="Underwater Love" size="23.0" />
-         </font>
-      </Text>
-      <Text fill="WHITE" layoutX="340.0" layoutY="347.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Multiple players can share the same space." wrappingWidth="469.1036834716797">
-         <font>
-            <Font name="Blackadder ITC" size="23.0" />
-         </font>
-      </Text>
-      <Text fill="WHITE" layoutX="168.0" layoutY="411.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Winning :">
-         <font>
-            <Font name="Underwater Love" size="23.0" />
-         </font>
-      </Text>
-      <Text fill="#acbbd7" layoutX="340.0" layoutY="399.0" strokeType="OUTSIDE" strokeWidth="0.0" text="On the final space, answer a last question. " wrappingWidth="469.1036834716797">
-         <font>
-            <Font name="Blackadder ITC" size="23.0" />
-         </font>
-      </Text>
-      <Text fill="#f4f8ff" layoutX="340.0" layoutY="300.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Correct = move forward, wrong = stay." wrappingWidth="469.1036834716797">
-         <font>
-            <Font name="Blackadder ITC" size="23.0" />
-         </font>
-      </Text>
-      <Text fill="WHITE" layoutX="340.0" layoutY="423.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Correct = victory, wrong = try again next turn." wrappingWidth="469.1036834716797">
-         <font>
-            <Font name="Blackadder ITC" size="23.0" />
-         </font>
-      </Text>
+
    </children>
-</AnchorPane>
+</StackPane>
